add meta keywords and description

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta name="Description" content="Enter your description here"/>
+<meta name="description" content="A page dedicated to the works of Matilda Anderssons, a swedish artist that does illustrations and acrylic paintings."/>
+<meta name="keywords" content="artist, matilda, illustrations, paintings, acrylics">
 <link rel="stylesheet" href="assets/css/style.css">
-<title>Title</title>
+<title>Matilda Illustration</title>
 </head>
 <body>
 
