--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta name="description" content="A page dedicated to the works of Matilda Anderssons, a swedish artist that does illustrations and acrylic paintings."/>
-<meta name="keywords" content="artist, matilda, illustrations, paintings, acrylics">
-<link rel="stylesheet" href="assets/css/style.css">
-<title>Matilda Illustration</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A page dedicated to the works of Matilda Anderssons, a swedish artist that does illustrations and acrylic paintings."/>
+    <meta name="keywords" content="artist, matilda, illustrations, paintings, acrylics">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Matilda Illustration</title>
 </head>
-<body>
 
+<body>
+    <header></header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
+
