--- a/index.html
+++ b/index.html
@@ -11,7 +11,29 @@
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <!-- Logo -->
+        <a href="index.html" class="logo">
+            <h1 >Matilda illustration</h1>
+           </a>
+        <!-- Navigation menu -->
+        <nav class="nav">
+            <ul class="nav-list">
+                 <li class="nav-list-item">
+                    <a href="index.html" class="nav-list-link active" aria-label="If you click in this it takes you to the main page">Home</a>
+                 </li>
+                 <li class="nav-list-item">
+                    <a href="#" class="nav-list-link" aria-label="Takes you to the about page, where you can find information about the artist">About</a>
+                 </li>
+                 <li class="nav-list-item">
+                    <a href="#" class="nav-list-link" aria-label="if you click on this it takes you to the gallery page">Gallery</a>
+                 </li>
+                 <li class="nav-list-item">
+                    <a href="#" class="nav-list-link" aria-label="If you click on this it takes you to the contact form page">Contact</a>
+                 </li>
+            </ul>
+        </nav>
+    </header>
     <main></main>
     <footer></footer>
 </body>
