add style to font awesome icons and footer

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </nav>
     </header>
     <main></main>
-    <footer>
+    <footer class="footer">
         <a href="https://www.facebook.com" target="_blank" rel="noopener" class="footer-icon" 
             aria-label="Find me on Facebook (link opens in a new tab)"><i class="fab fa-facebook-f"></i></a>
         <a href="https://www.instagram.com" target="_blank" rel="noopener" class="footer-icon" 
