add link to main and style

--- a/index.html
+++ b/index.html
@@ -40,13 +40,16 @@
             </ul>
         </nav>
     </header>
-    <main></main>
+    <main>
+            <div class="about-me"><i class="fas fa-arrow-circle-right"></i><a href="#" class="main-link">About me</a>
+            </div>
+    </main>
     <footer class="footer">
-        <a href="https://www.facebook.com" target="_blank" rel="noopener" class="footer-icon" 
+        <a href="https://www.facebook.com" target="_blank" rel="noopener" class="footer-icon"
             aria-label="Find me on Facebook (link opens in a new tab)"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://www.instagram.com" target="_blank" rel="noopener" class="footer-icon" 
+        <a href="https://www.instagram.com" target="_blank" rel="noopener" class="footer-icon"
             aria-label="Find me on Instagram (link opens in a new tab)"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.twitter.com" target="_blank" rel="noopener" class="footer-icon" 
+        <a href="https://www.twitter.com" target="_blank" rel="noopener" class="footer-icon"
             aria-label="Find me me Twitter (link opens in a new tab)"><i class="fab fa-twitter"></i></a>
     </footer>
     <script src="https://kit.fontawesome.com/1b00d9a190.js" crossorigin="anonymous"></script>
