add about.html and style

--- a/about.html
+++ b/about.html
@@ -22,11 +22,11 @@
         <nav class="nav">
             <ul class="nav-list">
                 <li class="nav-list-item">
-                    <a href="index.html" class="nav-list-link active"
+                    <a href="index.html" class="nav-list-link"
                         aria-label="If you click in this it takes you to the main page">Home</a>
                 </li>
                 <li class="nav-list-item">
-                    <a href="about.html" class="nav-list-link"
+                    <a href="about.html" class="nav-list-link active"
                         aria-label="Takes you to the about page, where you can find information about the artist">About</a>
                 </li>
                 <li class="nav-list-item">
@@ -41,8 +41,7 @@
         </nav>
     </header>
     <main>
-            <div class="main-nav-font"><i class="fas fa-arrow-circle-right"></i><a href="about.html" class="main-link">About me</a>
-            </div>
+            <div class="main-nav-font"><i class="fas fa-palette"></i><a href="#" class="main-link">My works</a></div>
     </main>
     <footer class="footer">
         <a href="https://www.facebook.com" target="_blank" rel="noopener" class="footer-icon"
@@ -57,3 +56,5 @@
 </body>
 
 </html>
+
+
