--- a/about.html
+++ b/about.html
@@ -41,6 +41,8 @@
         </nav>
     </header>
     <main>
+        <div class="about"></div>
+        <div class="painting-style"></div>
             <div class="main-nav-font"><i class="fas fa-palette"></i><a href="#" class="main-link">My works</a></div>
     </main>
     <footer class="footer">
