change font awesome and add margin

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </nav>
     </header>
     <main>
-            <div class="main-nav-font"><i class="fas fa-arrow-circle-right"></i><a href="about.html" class="main-link">About me</a>
+            <div class="main-nav-font"><i class="fas fa-arrow-right"></i><a href="about.html" class="main-link">About me</a>
             </div>
     </main>
     <footer class="footer">
