change style setup for main

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="first-page">
             <div class="main-nav-font"><i class="fas fa-arrow-right"></i><a href="about.html" class="main-link">About me</a>
             </div>
     </main>
