--- a/about.html
+++ b/about.html
@@ -40,10 +40,17 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <div class="about"></div>
-        <div class="painting-style"></div>
-            <div class="main-nav-font"><i class="fas fa-palette"></i><a href="#" class="main-link">My works</a></div>
+    <main class="about-page">
+        <!-- The main about section -->
+        <div class="about">
+           <div class="about-me">
+               <!-- Add information about matilda-->
+           </div> 
+           <div class="paint-styles">
+               <!-- Add two links to diffent groups in gallery. -->
+           </div>
+           
+        </div>
     </main>
     <footer class="footer">
         <a href="https://www.facebook.com" target="_blank" rel="noopener" class="footer-icon"
