--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
     </header>
     <main class="about-page">
         <!-- The main about section -->
-        <div class="about">
+        <div class="about-container">
            <div class="about-me">
                <!-- Add information about matilda-->
            </div> 
