--- a/about.html
+++ b/about.html
@@ -44,9 +44,18 @@
         <!-- The main about section -->
         <div class="about-container">
            <div class="about-me">
+               <h3>Hi, Im Matilda!</h3>
+               <p>
+                   This is just a copy paste text, change this when matilda sends her info.
+                   "Five years ago, I enrolled in an advanced painting class at the San Francisco Art Institute 
+                    through its Adult Continuing Education Program.  I hadn't painted much since college where
+                    I managed to only fit in three art classes in four years otherwise filled with physics, 
+                    chemistry and geology classes. But a decade later, in an art studio whose ghosts included 
+                    Richard Diebenkorn and Elmer Bischoff, I picked up a paintbrush, and began painting."</p>
                <!-- Add information about matilda-->
            </div> 
            <div class="paint-styles">
+               
                <!-- Add two links to diffent groups in gallery. -->
            </div>
            
