add fictional text to about sections paint styles

--- a/about.html
+++ b/about.html
@@ -43,22 +43,27 @@
     <main class="about-page">
         <!-- The main about section -->
         <div class="about-container">
-           <div class="about-me">
-               <h3>Hi, Im Matilda!</h3>
-               <p>
-                   This is just a copy paste text, change this when matilda sends her info.
-                   "Five years ago, I enrolled in an advanced painting class at the San Francisco Art Institute 
-                    through its Adult Continuing Education Program.  I hadn't painted much since college where
-                    I managed to only fit in three art classes in four years otherwise filled with physics, 
-                    chemistry and geology classes. But a decade later, in an art studio whose ghosts included 
+            <div class="about-me">
+                <h3 class="about-header">Hi, Im Matilda!</h3>
+                <p>
+                    This is just a copy paste text, change this when matilda sends her info.
+                    "Five years ago, I enrolled in an advanced painting class at the San Francisco Art Institute
+                    through its Adult Continuing Education Program. I hadn't painted much since college where
+                    I managed to only fit in three art classes in four years otherwise filled with physics,
+                    chemistry and geology classes. But a decade later, in an art studio whose ghosts included
                     Richard Diebenkorn and Elmer Bischoff, I picked up a paintbrush, and began painting."</p>
-               <!-- Add information about matilda-->
-           </div> 
-           <div class="paint-styles">
-               
-               <!-- Add two links to diffent groups in gallery. -->
-           </div>
-           
+                <!-- Add information about matilda-->
+            </div>
+            <div class="paint-styles">
+                <h3 class="about-header">What I Do</h3>
+                <p>
+                    Replace this text later
+                    An illustration is a decoration, interpretation or visual explanation of a text,
+                    concept or process, designed for integration in print and digital published</p>
+                    <a href="#" aria-label="If you click this it will take you to the gallery page that shows my illustraions">My Illustraions</a>
+                <!-- Add two links to diffent groups in gallery. -->
+            </div>
+
         </div>
     </main>
     <footer class="footer">
@@ -74,5 +79,3 @@
 </body>
 
 </html>
-
-
