--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
         <div class="about-container">
             <div class="about-me">
                 <h3 class="about-header">Hi, Im Matilda!</h3>
-                <p>
+                <p class="about-text">
                     This is just a copy paste text, change this when matilda sends her info.
                     "Five years ago, I enrolled in an advanced painting class at the San Francisco Art Institute
                     through its Adult Continuing Education Program. I hadn't painted much since college where
@@ -56,11 +56,11 @@
             </div>
             <div class="paint-styles">
                 <h3 class="about-header">What I Do</h3>
-                <p>
+                <p class="about-text">
                     Replace this text later
                     An illustration is a decoration, interpretation or visual explanation of a text,
                     concept or process, designed for integration in print and digital published</p>
-                    <a href="#" aria-label="If you click this it will take you to the gallery page that shows my illustraions">My Illustraions</a>
+                    <a href="#" class="gallery-link" aria-label="If you click this it will take you to the gallery page that shows my illustraions">My Illustraions</a>
                 <!-- Add two links to diffent groups in gallery. -->
             </div>
 
