--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                         aria-label="Takes you to the about page, where you can find information about the artist">About</a>
                 </li>
                 <li class="nav-list-item">
-                    <a href="#" class="nav-list-link"
+                    <a href="gallery.html" class="nav-list-link"
                         aria-label="if you click on this it takes you to the gallery page">Gallery</a>
                 </li>
                 <li class="nav-list-item">
