add content to gallery page and style including media for large and medium screens

--- a/gallery.html
+++ b/gallery.html
@@ -41,6 +41,8 @@
         </nav>
     </header>
     <main class="gallery-page">
+        <a href="about.html" class="illustration-category"><div class="gallery-categories"></div></a>
+        <div class="gallery-categories" ></div>
             <!-- Add two categories here -->
     </main>
     <footer class="footer">
