add background to gallery category links

--- a/gallery.html
+++ b/gallery.html
@@ -41,9 +41,14 @@
         </nav>
     </header>
     <main class="gallery-page">
-        <a href="about.html" class="illustration-category"><div class="gallery-categories"></div></a>
-        <div class="gallery-categories" ></div>
-            <!-- Add two categories here -->
+        <!-- Link to the illustration gallery page -->
+        <a href="about.html" class="gallery-link" aria-label="if you click on this it will take you to the illustration gallery">
+            <div class="gallery-categories illustration-category"></div>
+        Illustrations</a>
+        <!-- Link to the acrylic gallery page -->
+        <a href="about.html" class="gallery-link" aria-label="If you click on this it will take you to the gallery of acrylic paintings">
+            <div class="gallery-categories acrylics-category"></div>
+        Acrylics</a>
     </main>
     <footer class="footer">
         <a href="https://www.facebook.com" target="_blank" rel="noopener" class="footer-icon"
