change content of first page and add style

--- a/index.html
+++ b/index.html
@@ -41,8 +41,11 @@
         </nav>
     </header>
     <main class="first-page">
-            <div class="main-nav-font"><i class="fas fa-arrow-right"></i><a href="about.html" class="main-link">About me</a>
+        <div class="welcome">
+            <h2 class="im-matilda">Hi there, Im Matilda!</h2>
+            <div class="to-about-box"><a href="about.html" class="main-link">Get to know me</a>
             </div>
+        </div>
     </main>
     <footer class="footer">
         <a href="https://www.facebook.com" target="_blank" rel="noopener" class="footer-icon"
