add styles to main so nav fits on small screens

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
         <!-- The main about section -->
         <div class="about-container">
             <div class="about-me">
-                <h3 class="about-header">Hi, Im Matilda!</h3>
+                <h3 class="about-header">Hi there, I'm Matilda!</h3>
                 <p class="about-text">
                     This is just a copy paste text, change this when matilda sends her info.
                     "Five years ago, I enrolled in an advanced painting class at the San Francisco Art Institute
@@ -62,7 +62,7 @@
                     concept or process, designed for integration in print and digital published</p>
                 <a href="#" class="gallery-link"
                     aria-label="If you click this it will take you to the gallery page that shows my illustraions">
-                    My Illustraions</a>
+                    My Illustrations</a>
                 <p class="about-text">
                     Replace this text later
                     Acrylic paint is a fast-drying paint made of pigment suspended in acrylic polymer 
