--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </header>
     <main class="first-page">
         <div class="welcome">
-            <h2 class="im-matilda">Hi there, Im Matilda!</h2>
+            <h2 class="im-matilda">Hi there, I'm Matilda!</h2>
             <div class="to-about-box"><a href="about.html" class="main-link">Get to know me</a>
             </div>
         </div>
