--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
                     Replace this text later
                     An illustration is a decoration, interpretation or visual explanation of a text,
                     concept or process, designed for integration in print and digital published</p>
-                <a href="#" class="gallery-link"
+                <a href="illustrations.html" class="gallery-link"
                     aria-label="If you click this it will take you to the gallery page that shows my illustraions">
                     My Illustrations</a>
                 <p class="about-text">
@@ -68,7 +68,7 @@
                     Acrylic paint is a fast-drying paint made of pigment suspended in acrylic polymer 
                     emulsion and plasticizers, silicone oils, defoamers, stabilizers, or metal soaps. 
                     Most acrylic paints are water-based</p>
-                <a href="#" class="gallery-link"
+                <a href="acrylics.html" class="gallery-link"
                     aria-label="If you click this it will take you to the gallery page that shows my acrylic paintings">
                     My Acrylics</a>
                 <!-- Add two links to diffent groups in gallery. -->
