--- a/gallery.html
+++ b/gallery.html
@@ -42,11 +42,11 @@
     </header>
     <main class="gallery-page">
         <!-- Link to the illustration gallery page -->
-        <a href="about.html" class="gallery-link" aria-label="if you click on this it will take you to the illustration gallery">
+        <a href="illustrations.html" class="gallery-link" aria-label="if you click on this it will take you to the illustration gallery">
             <div class="gallery-categories illustration-category"></div>
         Illustrations</a>
         <!-- Link to the acrylic gallery page -->
-        <a href="about.html" class="gallery-link" aria-label="If you click on this it will take you to the gallery of acrylic paintings">
+        <a href="acrylics.html" class="gallery-link" aria-label="If you click on this it will take you to the gallery of acrylic paintings">
             <div class="gallery-categories acrylics-category"></div>
         Acrylics</a>
     </main>
