--- a/illustrations.html
+++ b/illustrations.html
@@ -22,7 +22,7 @@
         <nav class="nav">
             <ul class="nav-list">
                 <li class="nav-list-item">
-                    <a href="index.html" class="nav-list-link active"
+                    <a href="index.html" class="nav-list-link"
                         aria-label="If you click in this it takes you to the main page">Home</a>
                 </li>
                 <li class="nav-list-item">
@@ -30,7 +30,7 @@
                         aria-label="Takes you to the about page, where you can find information about the artist">About</a>
                 </li>
                 <li class="nav-list-item">
-                    <a href="gallery.html" class="nav-list-link"
+                    <a href="gallery.html" class="nav-list-link active"
                         aria-label="if you click on this it takes you to the gallery page">Gallery</a>
                 </li>
                 <li class="nav-list-item">
