--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="header" >
         <!-- Logo -->
-        <a href="index.html" class="logo">
-            <h1>Matilda Illustration</h1>
-        </a>
+        <h1 class="logo">
+        <a href="index.html" class="logo" aria-label="If you click on this it takes you back to the first page 'home' ">
+            Matilda Illustration</a>
+        </h1>
+        
         <!-- Navigation menu -->
         <nav class="nav">
             <ul class="nav-list">
