fix logo structure on all other files and indent all code

--- a/about.html
+++ b/about.html
@@ -15,9 +15,11 @@
 <body>
     <header class="header">
         <!-- Logo -->
-        <a href="index.html" class="logo">
-            <h1>Matilda Illustration</h1>
-        </a>
+        <h1 class="logo">
+            <a href="index.html" class="logo"
+                aria-label="If you click on this it takes you back to the first page 'home' ">
+                Matilda Illustration</a>
+        </h1>
         <!-- Navigation menu -->
         <nav class="nav">
             <ul class="nav-list">
@@ -65,8 +67,8 @@
                     My Illustrations</a>
                 <p class="about-text">
                     Replace this text later
-                    Acrylic paint is a fast-drying paint made of pigment suspended in acrylic polymer 
-                    emulsion and plasticizers, silicone oils, defoamers, stabilizers, or metal soaps. 
+                    Acrylic paint is a fast-drying paint made of pigment suspended in acrylic polymer
+                    emulsion and plasticizers, silicone oils, defoamers, stabilizers, or metal soaps.
                     Most acrylic paints are water-based</p>
                 <a href="acrylics.html" class="gallery-link"
                     aria-label="If you click this it will take you to the gallery page that shows my acrylic paintings">
