--- a/illustrations.html
+++ b/illustrations.html
@@ -15,9 +15,11 @@
 <body>
     <header class="header">
         <!-- Logo -->
-        <a href="index.html" class="logo">
-            <h1>Matilda Illustration</h1>
-        </a>
+        <h1 class="logo">
+            <a href="index.html" class="logo"
+                aria-label="If you click on this it takes you back to the first page 'home' ">
+                Matilda Illustration</a>
+        </h1>
         <!-- Navigation menu -->
         <nav class="nav">
             <ul class="nav-list">
@@ -41,7 +43,7 @@
         </nav>
     </header>
     <main class="illustration-page">
-     
+
     </main>
     <footer class="footer">
         <a href="https://www.facebook.com" target="_blank" rel="noopener" class="footer-icon"
