--- a/gallery.html
+++ b/gallery.html
@@ -15,9 +15,11 @@
 <body>
     <header class="header">
         <!-- Logo -->
-        <a href="index.html" class="logo">
-            <h1>Matilda Illustration</h1>
-        </a>
+        <h1 class="logo">
+            <a href="index.html" class="logo"
+                aria-label="If you click on this it takes you back to the first page 'home' ">
+                Matilda Illustration</a>
+        </h1>
         <!-- Navigation menu -->
         <nav class="nav">
             <ul class="nav-list">
@@ -42,13 +44,17 @@
     </header>
     <main class="gallery-page">
         <!-- Link to the illustration gallery page -->
-        <a href="illustrations.html" class="gallery-link" aria-label="if you click on this it will take you to the illustration gallery">
+        <a href="illustrations.html" class="gallery-link"
+            aria-label="if you click on this it will take you to the illustration gallery">
             <div class="gallery-categories illustration-category"></div>
-        Illustrations</a>
+            Illustrations
+        </a>
         <!-- Link to the acrylic gallery page -->
-        <a href="acrylics.html" class="gallery-link" aria-label="If you click on this it will take you to the gallery of acrylic paintings">
+        <a href="acrylics.html" class="gallery-link"
+            aria-label="If you click on this it will take you to the gallery of acrylic paintings">
             <div class="gallery-categories acrylics-category"></div>
-        Acrylics</a>
+            Acrylics
+        </a>
     </main>
     <footer class="footer">
         <a href="https://www.facebook.com" target="_blank" rel="noopener" class="footer-icon"
