--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
         <nav class="nav">
             <ul class="nav-list">
                 <li class="nav-list-item">
-                    <a href="index.html" class="nav-list-link active"
+                    <a href="index.html" class="nav-list-link"
                         aria-label="If you click in this it takes you to the main page">Home</a>
                 </li>
                 <li class="nav-list-item">
@@ -36,7 +36,7 @@
                         aria-label="if you click on this it takes you to the gallery page">Gallery</a>
                 </li>
                 <li class="nav-list-item">
-                    <a href="#" class="nav-list-link"
+                    <a href="contact.html" class="nav-list-link active"
                         aria-label="If you click on this it takes you to the contact form page">Contact</a>
                 </li>
             </ul>
