--- a/illustrations.html
+++ b/illustrations.html
@@ -36,7 +36,7 @@
                         aria-label="if you click on this it takes you to the gallery page">Gallery</a>
                 </li>
                 <li class="nav-list-item">
-                    <a href="#" class="nav-list-link"
+                    <a href="contact.html" class="nav-list-link"
                         aria-label="If you click on this it takes you to the contact form page">Contact</a>
                 </li>
             </ul>
