change order of the divs in about page and indent code

--- a/about.html
+++ b/about.html
@@ -56,9 +56,6 @@
                     Richard Diebenkorn and Elmer Bischoff, I picked up a paintbrush, and began painting."</p>
                 <!-- Add information about matilda-->
             </div>
-            <div class="painter-image">
-                <img src="assets/images/matildapaintscolornew.jpg" alt="A image of the painter from behind when she is painting a acrylic painting of a woman with a hat and a purple sweather" class="matilda-picture">
-            </div>
             <div class="paint-styles">
                 <h3 class="about-header">What I Do</h3>
                 <p class="about-text">
@@ -76,8 +73,15 @@
                 <a href="acrylics.html" class="gallery-link"
                     aria-label="If you click this it will take you to the gallery page that shows my acrylic paintings">
                     My Acrylics</a>
-                <!-- Add two links to diffent groups in gallery. -->
             </div>
+
+            <div class="painter-image">
+                <img src="assets/images/matildapaintscolornew.jpg"
+                    alt="A image of the painter from behind when she is painting a acrylic painting of a woman with a hat and a purple sweather"
+                    class="matilda-picture">
+            </div>
+            <!-- Add two links to diffent groups in gallery. -->
+
             <div class="custom-order">
 
             </div>
