--- a/about.html
+++ b/about.html
@@ -80,7 +80,13 @@
                     My Acrylics</a>
             </div>
             <div class="custom-order">
-
+                <h3 class="order-header">Custom paintings</h3>
+                <p class="about-text">
+                    Replace this text later
+                    I do custom paintings to your wishing, a well appriciated gift for that special someone. Get in touch for a quote</p>
+                <a href="contact.html" class="gallery-link"
+                    aria-label="If you click this it will take you to the contact page where you can fill in a form">
+                    Contact me</a>
             </div>
 
         </div>
