add a p to about text for seperation

--- a/about.html
+++ b/about.html
@@ -50,8 +50,8 @@
                 <p class="about-text">
                     This is just a copy paste text, change this when matilda sends her info.
                     "Five years ago, I enrolled in an advanced painting class at the San Francisco Art Institute
-                    through its Adult Continuing Education Program. I hadn't painted much since college where
-                    I managed to only fit in three art classes in four years otherwise filled with physics,
+                    through its Adult Continuing Education Program. I hadn't painted much since college where</p>
+                    <p>I managed to only fit in three art classes in four years otherwise filled with physics,
                     chemistry and geology classes. But a decade later, in an art studio whose ghosts included
                     Richard Diebenkorn and Elmer Bischoff, I picked up a paintbrush, and began painting."</p>
                 <!-- Add information about matilda-->
