--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
         <!-- The main about section -->
         <div class="about-container">
             <div class="about-me">
-                <h3 class="about-header">Hi there, I'm Matilda!</h3>
+                <h3 class="about-header">Hi, I'm Matilda!</h3>
                 <p class="about-text">
                     This is just a copy paste text, change this when matilda sends her info.
                     "Five years ago, I enrolled in an advanced painting class at the San Francisco Art Institute
