add style to about page headers

--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
                     My Acrylics</a>
             </div>
             <div class="custom-order">
-                <h3 class="order-header">Custom paintings</h3>
+                <h3 class="about-header">Custom paintings</h3>
                 <p class="about-text">
                     Replace this text later
                     I do custom paintings to your wishing, a well appriciated gift for that special someone. Get in touch for a quote</p>
