add new image for about page and change in html

--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
                 <!-- Add information about matilda-->
             </div>
             <div class="painter-image">
-                <img src="assets/images/matildapaintscolornew.jpg"
+                <img src="assets/images/matilda-paints_750x500-016.webp"
                     alt="A image of the painter from behind when she is painting a acrylic painting of a woman with a hat and a purple sweather"
                     class="matilda-picture">
             </div>
