add images to assets folder

--- a/illustrations.html
+++ b/illustrations.html
@@ -50,8 +50,8 @@
             <img src="assets/images/illustrations/grandparents_800x600.webp" alt="an illustration of granparents and showing the years they have been married">
             <img src="assets/images/illustrations/green-vest_800x600-002.webp" alt="an illustration of a girl with a green vest and green beanie">
             <img src="assets/images/illustrations/headincloud_800x600-007.webp" alt="an illustration of a lady with her head gone in a cloude">
-            <img src="assets/images/illustrations/Par_800x600-004.webp" alt="an illustration of a couple being happy together">
-            <img src="assets/images/illustrations/pink-magväska_800x600-006.webp" alt="an illustration of a girl with a bag around her waist">
+            <img src="assets/images/illustrations/Par_800x600-004.webp" alt="an illustration of a couple being happy together and the man holding a dog">
+            <img src="assets/images/illustrations/pink-magväska_800x600-006.webp" alt="an illustration of a girl with a bag around her waist with pink background">
             <img src="assets/images/illustrations/purplesittinggirl_800x600-009.webp" alt="an illustration of a girl sitting with purple background">
 
         </div>
