rename div class on illustration page

--- a/illustrations.html
+++ b/illustrations.html
@@ -43,7 +43,7 @@
         </nav>
     </header>
     <main class="illustration-page">
-        <div class="illustrations">
+        <div class="gallery-images">
             <img src="assets/images/illustrations/3amigos_800x600-005.webp" alt="an illustration portraing three friends togheter">
             <img src="assets/images/illustrations/cd-fullsize_800x600-000.webp" alt="an illustration of a girl with a Dior bag">
             <img src="assets/images/illustrations/CD800x600-001.webp" alt="a close up of the illustration of a girl with a dior bag">
