add images to acrylic page

--- a/acrylics.html
+++ b/acrylics.html
@@ -43,6 +43,12 @@
         </nav>
     </header>
     <main class="acrylic-page">
+        <div class="gallery-images">
+            <img src="assets/images/acrylics/acryllinje.webp" alt="a acrylic painting, showing the lines of a woman">
+            <img src="assets/images/acrylics/acrylmålning.webp" alt="a acrylic painting of a woman with squares in the background">
+            <img src="assets/images/acrylics/rosaleoacrylic-014.webp" alt="a acrylic painting of a woman and a leopard with pink background">
+            <img src="assets/images/acrylics/acryllinjeq2gul.webp" alt="a acrylic painting, showing the lines of a woman">
+        </div>
 
         <a></a>
     </main>
