add 'go back' buttom on acrylic and illustration page and add style

--- a/acrylics.html
+++ b/acrylics.html
@@ -49,7 +49,12 @@
             <img src="assets/images/acrylics/rosaleoacrylic-014.webp" alt="a acrylic painting of a woman and a leopard with pink background">
             <img src="assets/images/acrylics/acryllinjeq2gul.webp" alt="a acrylic painting, showing the lines of a woman">
         </div>
-
+        <div class="back">
+            <a href="gallery.html" class="gallery-link"
+            aria-label="If you click on this it will take you back to the first gallery page where">
+            Back to gallery
+        </a>
+        </div>
         <a></a>
     </main>
     <footer class="footer">
