--- a/illustrations.html
+++ b/illustrations.html
@@ -63,6 +63,12 @@
             
             
         </div>
+        <div class="back">
+            <a href="gallery.html" class="gallery-link"
+            aria-label="If you click on this it will take you back to the first gallery page where">
+            Back to gallery
+        </a>
+        </div>
 
     </main>
     <footer class="footer">
