--- a/contact.html
+++ b/contact.html
@@ -49,11 +49,11 @@
                 <legend>Let me hear it!</legend>
                 <div>
                 <label for="name">Name: </label>
-                <input id="name" type="text" name="name">
+                <input id="name" type="text" name="name" class="form-input">
             </div>
             <div>
                 <label for="email">Email: </label>
-                <input id="email" type="email" name="email">
+                <input id="email" type="email" name="email" class="form-input">
             </div>
             <div>
                 <label for="options">What can I do for you?</label>
