--- a/contact.html
+++ b/contact.html
@@ -46,15 +46,15 @@
     <main class="contact-page">
         <form action="#" method="get" class="contact-form">
 
-            <div>
+            <div class="contact-element">
                 <label for="name">Name: </label>
                 <input id="name" type="text" name="name" class="form-input">
             </div>
-            <div>
+            <div class="contact-element">
                 <label for="email">Email: </label>
                 <input id="email" type="email" name="email" class="form-input">
             </div>
-            <div>
+            <div class="contact-element">
                 <label for="options">What can I do for you?</label>
                 <select id="options" name="options">
                     <option value="questions">Questions</option>
@@ -63,11 +63,11 @@
                     <option value="Collaberations">Collaberations</option>
                 </select>
             </div>
-            <div>
+            <div class="contact-element">
                 <textarea name="message" cols="30" rows="10"></textarea>
             </div>
-            <div>
-                <input type="button" value="submit">
+            <div class="contact-element">
+                <input type="button" value="submit" class="submit-button">
             </div>
 
         </form>
