--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
             </div>
             <div class="contact-element">
                 <label for="options">What can I do for you?</label>
-                <select id="options" name="options">
+                <select id="options" name="options" class="form-select">
                     <option value="questions">Questions</option>
                     <option value="orders">Special order</option>
                     <option value="contact">Contact</option>
