add style to textarea

--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
                 </select>
             </div>
             <div class="contact-element">
-                <textarea name="message" cols="30" rows="10"></textarea>
+                <textarea name="message" class="form-input textarea"></textarea>
             </div>
             <div class="contact-element">
                 <input type="button" value="submit" class="submit-button">
