add placeholder text to contact form input areas

--- a/contact.html
+++ b/contact.html
@@ -48,11 +48,11 @@
 
             <div class="contact-element">
                 <label for="name">Name: </label>
-                <input id="name" type="text" name="name" class="form-input">
+                <input id="name" type="text" name="name" class="form-input" placeholder="Your name..">
             </div>
             <div class="contact-element">
                 <label for="email">Email: </label>
-                <input id="email" type="email" name="email" class="form-input">
+                <input id="email" type="email" name="email" class="form-input" placeholder="Your email adress..">
             </div>
             <div class="contact-element">
                 <label for="options">What can I do for you?</label>
@@ -64,7 +64,7 @@
                 </select>
             </div>
             <div class="contact-element">
-                <textarea name="message" class="form-input textarea"></textarea>
+                <textarea name="message" class="form-input textarea" placeholder="Write your message here!"></textarea>
             </div>
             <div class="contact-element">
                 <input type="button" value="submit" class="submit-button">
