--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
                 <textarea name="message" class="form-input textarea" placeholder="Write your message here!"></textarea>
             </div>
             <div class="contact-element">
-                <input type="button" value="submit" class="submit-button">
+                <input type="submit" value="submit" class="submit-button">
             </div>
 
         </form>
