add style and text to contact form

--- a/contact-reviced.html
+++ b/contact-reviced.html
@@ -46,7 +46,13 @@
     <main class="contact-page">
         <div class="contact-form">
             <h2>Thanks for reaching out, I will get back to you as soon as possible!</h2>
-            
+
+        </div>
+        <div class="back">
+            <a href="contact.html" class="gallery-link"
+            aria-label="If you click on this it will take you back to the first gallery page where">
+            Back to contact
+        </a>
         </div>
     </main>
     <footer class="footer">
