--- a/contact.html
+++ b/contact.html
@@ -44,8 +44,12 @@
         </nav>
     </header>
     <main class="contact-page">
-        <form action="#" method="get" class="contact-form">
-
+        
+        <form action="contact-reviced.html" method="get" class="contact-form">
+            <div class="contact-text">
+                <h2>Have a question?</h2>
+                <p>Or maybe you would like to get a quote for a custom painting? Whatever you have on your heart - contact me!</p>
+            </div>
             <div class="contact-element">
                 <label for="name">Name: </label>
                 <input id="name" type="text" name="name" class="form-input" placeholder="Your name..">
