--- a/contact-reviced.html
+++ b/contact-reviced.html
@@ -44,7 +44,7 @@
         </nav>
     </header>
     <main class="contact-page">
-        <div class="contact-form">
+        <div class="contact-form reviced-form">
             <h2>Thanks for reaching out, I will get back to you as soon as possible!</h2>
 
         </div>
