--- a/contact.html
+++ b/contact.html
@@ -52,11 +52,11 @@
             </div>
             <div class="contact-element">
                 <label for="name">Name: </label>
-                <input id="name" type="text" name="name" class="form-input" placeholder="Your name..">
+                <input id="name" type="text" name="name" class="form-input" placeholder="Your name.." required>
             </div>
             <div class="contact-element">
                 <label for="email">Email: </label>
-                <input id="email" type="email" name="email" class="form-input" placeholder="Your email adress..">
+                <input id="email" type="email" name="email" class="form-input" placeholder="Your email adress.." required>
             </div>
             <div class="contact-element">
                 <label for="options">What can I do for you?</label>
@@ -68,7 +68,7 @@
                 </select>
             </div>
             <div class="contact-element">
-                <textarea name="message" class="form-input textarea" placeholder="Write your message here!"></textarea>
+                <textarea name="message" class="form-input textarea" placeholder="Write your message here!" required></textarea>
             </div>
             <div class="contact-element">
                 <input type="submit" value="submit" class="submit-button">
