test and change background images for about and contact page + change min height to main

--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
             <div class="contact-element">
                 <textarea name="message" class="form-input textarea" placeholder="Write your message here!" required></textarea>
             </div>
-            <div class="contact-element">
+            <div class="contact-element submit-center">
                 <input type="submit" value="submit" class="submit-button">
             </div>
 
