add one more div and content to about page

--- a/about.html
+++ b/about.html
@@ -89,6 +89,16 @@
                     aria-label="If you click this it will take you to the contact page where you can fill in a form">
                     Contact me</a>
             </div>
+
+            <div class="latest-works">
+                <h3 class="about-header">Custom paintings</h3>
+                <p class="about-text">
+                    Replace this text later
+                    I do custom paintings to your wishing, a well appriciated gift for that special someone. Get in touch for a quote</p>
+                <a href="https://www.instagram.com" target="_blank" rel="noopener" class="gallery-link"
+                    aria-label="If you click this it will take you to my instagram (link opens in a new tab)">
+                    Visit my Instagram</a>
+            </div>
         </div>
     </main>
     <footer class="footer">
