--- a/about.html
+++ b/about.html
@@ -80,6 +80,14 @@
                     aria-label="If you click this it will take you to the gallery page that shows my acrylic paintings">
                     My Acrylics</a>
             </div>
+            <div class="latest-works">
+                <h3 class="about-header">My latest works</h3>
+                <p class="about-text">
+                   You'll find all of my lastest works on my instagram, I would love it if you'd like to follow me there!</p>
+                <a href="https://www.instagram.com/matilda.illustration/" target="_blank" rel="noopener" class="gallery-link"
+                    aria-label="If you click this it will take you to my instagram (link opens in a new tab)">
+                    Visit my Instagram</a>
+            </div>
             <div class="custom-order">
                 <h3 class="about-header">Custom paintings</h3>
                 <p class="about-text">
@@ -88,16 +96,6 @@
                 <a href="contact.html" class="gallery-link"
                     aria-label="If you click this it will take you to the contact page where you can fill in a form">
                     Contact me</a>
-            </div>
-
-            <div class="latest-works">
-                <h3 class="about-header">Custom paintings</h3>
-                <p class="about-text">
-                    Replace this text later
-                    I do custom paintings to your wishing, a well appriciated gift for that special someone. Get in touch for a quote</p>
-                <a href="https://www.instagram.com" target="_blank" rel="noopener" class="gallery-link"
-                    aria-label="If you click this it will take you to my instagram (link opens in a new tab)">
-                    Visit my Instagram</a>
             </div>
         </div>
     </main>
