--- a/about.html
+++ b/about.html
@@ -47,14 +47,21 @@
         <div class="about-container">
             <hr>
             <div class="about-me">
-                <h2 class="about-header">Hi, I'm Matilda!</h2>
+                <h2 class="about-header">Hey you!</h2>
                 <p class="about-text">
-                    This is just a copy paste text, change this when matilda sends her info.
-                    "Five years ago, I enrolled in an advanced painting class at the San Francisco Art Institute
-                    through its Adult Continuing Education Program. I hadn't painted much since college where</p>
-                    <p>I managed to only fit in three art classes in four years otherwise filled with physics,
-                    chemistry and geology classes. But a decade later, in an art studio whose ghosts included
-                    Richard Diebenkorn and Elmer Bischoff, I picked up a paintbrush, and began painting."</p>
+                    Nice to meet you! If you haven't already guessed, my name is Matilda!
+                    I'm 22 years old, born and raised in Skövde, Sweden.
+                    Ever since I was a little kid have I loved to paint and be creative as many children does, however
+                    my love affair with painting never stopped.
+                    Little more than two years ago I attended a course in Illustration painting from Berghs Scool of
+                    Communication in Stockholm, and I've been hooked ever since!
+                    The last couple of years has been devoted to finding new ways and techniques to paint, and
+                    continuing on my creative path, you can follow my journey and also view my latest works on
+                    Instagram, I hope to see you there!</p>
+                <a href="https://www.instagram.com/matilda.illustration/" target="_blank" rel="noopener"
+                    class="gallery-link"
+                    aria-label="If you click this it will take you to my instagram (link opens in a new tab)">
+                    Visit my Instagram</a>
                 <!-- Add information about matilda-->
             </div>
             <div class="painter-image">
@@ -65,17 +72,21 @@
             <div class="paint-styles">
                 <h3 class="about-header">What I Do</h3>
                 <p class="about-text">
-                    Replace this text later
-                    An illustration is a decoration, interpretation or visual explanation of a text,
-                    concept or process, designed for integration in print and digital published</p>
+                    I mainly use two techniques of painting, Illustrations and Acrylics.
+
+                    My illustration are made on an IPad Pro with Apple Pencil in the program Procreate.
+                    I love how free you can be, I can paint whereever I am!
+                    View my illustrations in the gallery!
+                </p>
                 <a href="illustrations.html" class="gallery-link"
                     aria-label="If you click this it will take you to the gallery page that shows my illustraions">
                     My Illustrations</a>
                 <p class="about-text">
-                    Replace this text later
-                    Acrylic paint is a fast-drying paint made of pigment suspended in acrylic polymer
-                    emulsion and plasticizers, silicone oils, defoamers, stabilizers, or metal soaps.
-                    Most acrylic paints are water-based</p>
+                    I also do acrylic paintings, on canvases in different sizes, it’s a great way to relax and just
+                    enjoy the moment.
+                    I love to paint acrylic paintings together with friends and family, it’s a great way to spend time
+                    together and be creative.
+                    View my acrylic paintings in the gallery!</p>
                 <a href="acrylics.html" class="gallery-link"
                     aria-label="If you click this it will take you to the gallery page that shows my acrylic paintings">
                     My Acrylics</a>
@@ -83,16 +94,22 @@
             <div class="latest-works">
                 <h3 class="about-header">My latest works</h3>
                 <p class="about-text">
-                   You'll find all of my lastest works on my instagram, I would love it if you'd like to follow me there!</p>
-                <a href="https://www.instagram.com/matilda.illustration/" target="_blank" rel="noopener" class="gallery-link"
+                    You'll find all of my lastest works on my instagram, I would love it if you'd like to follow me
+                    there!</p>
+                <a href="https://www.instagram.com/matilda.illustration/" target="_blank" rel="noopener"
+                    class="gallery-link"
                     aria-label="If you click this it will take you to my instagram (link opens in a new tab)">
                     Visit my Instagram</a>
             </div>
             <div class="custom-order">
                 <h3 class="about-header">Custom paintings</h3>
                 <p class="about-text">
-                    Replace this text later
-                    I do custom paintings to your wishing, a well appriciated gift for that special someone. Get in touch for a quote</p>
+                    The easiest way to order a painting is to either use the contact page, or dm me on Instagram.
+                    If you'd like a custom illustration I'll need a photo to paint by, once I've got that, I can get
+                    back to you with a quote. Prices varies and are based on the level of details and scope of the
+                    painting.
+                    Get in touch and we'll sure figure something out that suits your need and occasion.
+                </p>
                 <a href="contact.html" class="gallery-link"
                     aria-label="If you click this it will take you to the contact page where you can fill in a form">
                     Contact me</a>
