--- a/about.html
+++ b/about.html
@@ -56,8 +56,7 @@
                     Little more than two years ago I attended a course in Illustration painting from Berghs Scool of
                     Communication in Stockholm, and I've been hooked ever since!
                     The last couple of years has been devoted to finding new ways and techniques to paint, and
-                    continuing on my creative path, you can follow my journey and also view my latest works on
-                    Instagram, I hope to see you there!</p>
+                    continuing on my creative path, hopefully I can inspire you to be creative to!</p>
                 <a href="https://www.instagram.com/matilda.illustration/" target="_blank" rel="noopener"
                     class="gallery-link"
                     aria-label="If you click this it will take you to my instagram (link opens in a new tab)">
@@ -86,7 +85,7 @@
                     enjoy the moment.
                     I love to paint acrylic paintings together with friends and family, it’s a great way to spend time
                     together and be creative.
-                    View my acrylic paintings in the gallery!</p>
+                    Get inspired by my acrylic paintings in the gallery!</p>
                 <a href="acrylics.html" class="gallery-link"
                     aria-label="If you click this it will take you to the gallery page that shows my acrylic paintings">
                     My Acrylics</a>
