add and remove style thats not needed

--- a/about.html
+++ b/about.html
@@ -49,10 +49,12 @@
             <div class="about-me">
                 <h2 class="about-header">Hey you!</h2>
                 <p class="about-text">
-                    Nice to meet you! If you haven't already guessed, my name is Matilda!
+                    Nice to meet you!<br> 
+                    If you haven't already guessed, my name is Matilda!
                     I'm 22 years old, born and raised in Skövde, Sweden.
                     Ever since I was a little kid have I loved to paint and be creative as many children does, however
-                    my love affair with painting never stopped.
+                    my love affair with painting never stopped.</p>
+                    <p class="about-text">
                     Little more than two years ago I attended a course in Illustration painting from Berghs Scool of
                     Communication in Stockholm, and I've been hooked ever since!
                     The last couple of years has been devoted to finding new ways and techniques to paint, and
