--- a/gallery.html
+++ b/gallery.html
@@ -44,13 +44,13 @@
     </header>
     <main class="gallery-page">
         <!-- Link to the illustration gallery page -->
-        <a href="illustrations.html" class="gallery-link"
+        <a href="illustrations.html" class="gallery-link gallery-page-link"
             aria-label="if you click on this it will take you to the illustration gallery">
             <div class="gallery-categories illustration-category"></div>
             Illustrations
         </a>
         <!-- Link to the acrylic gallery page -->
-        <a href="acrylics.html" class="gallery-link"
+        <a href="acrylics.html" class="gallery-link gallery-page-link"
             aria-label="If you click on this it will take you to the gallery of acrylic paintings">
             <div class="gallery-categories acrylics-category"></div>
             Acrylics
