add hover effect on contact page

--- a/contact.html
+++ b/contact.html
@@ -52,15 +52,15 @@
             </div>
             <div class="contact-element">
                 <label for="name">Name: </label>
-                <input id="name" type="text" name="name" class="form-input" placeholder="Your name.." required>
+                <input id="name" type="text" name="name" class="form-input form-hover" placeholder="Your name.." required>
             </div>
             <div class="contact-element">
                 <label for="email">Email: </label>
-                <input id="email" type="email" name="email" class="form-input" placeholder="Your email adress.." required>
+                <input id="email" type="email" name="email" class="form-input form-hover" placeholder="Your email adress.." required>
             </div>
             <div class="contact-element">
                 <label for="options">What can I do for you?</label>
-                <select id="options" name="options" class="form-select">
+                <select id="options" name="options" class="form-select form-hover">
                     <option value="questions">Questions</option>
                     <option value="orders">Special order</option>
                     <option value="contact">Contact</option>
@@ -68,10 +68,10 @@
                 </select>
             </div>
             <div class="contact-element">
-                <textarea name="message" class="form-input textarea" placeholder="Write your message here!" required></textarea>
+                <textarea name="message" class="form-input textarea form-hover" placeholder="Write your message here!" required></textarea>
             </div>
             <div class="contact-element submit-center">
-                <input type="submit" value="submit" class="submit-button">
+                <input type="submit" value="Submit" class="submit-button gallery-link">
             </div>
 
         </form>
