add togheter class for all 'link-boxes' that have the same style to remove excess code

--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
                     I love how free you can be, I can paint whereever I am!
                     View my illustrations in the gallery!
                 </p>
-                <a href="illustrations.html" class="gallery-link"
+                <a href="illustrations.html" class="link-box"
                     aria-label="If you click this it will take you to the gallery page that shows my illustraions">
                     My Illustrations</a>
                 <p class="about-text">
@@ -85,7 +85,7 @@
                     I love to paint acrylic paintings together with friends and family, it’s a great way to spend time
                     together and be creative.
                     Get inspired by my acrylic paintings in the gallery!</p>
-                <a href="acrylics.html" class="gallery-link"
+                <a href="acrylics.html" class="link-box"
                     aria-label="If you click this it will take you to the gallery page that shows my acrylic paintings">
                     My Acrylics</a>
             </div>
@@ -95,7 +95,7 @@
                     You'll find all of my lastest works on my instagram, I would love it if you'd like to follow me
                     there!</p>
                 <a href="https://www.instagram.com/matilda.illustration/" target="_blank" rel="noopener"
-                    class="gallery-link"
+                    class="link-box"
                     aria-label="If you click this it will take you to my instagram (link opens in a new tab)">
                     Visit my Instagram</a>
             </div>
@@ -108,7 +108,7 @@
                     painting.
                     Get in touch and we'll sure figure something out that suits your need and occasion.
                 </p>
-                <a href="contact.html" class="gallery-link"
+                <a href="contact.html" class="link-box"
                     aria-label="If you click this it will take you to the contact page where you can fill in a form">
                     Contact me</a>
             </div>
