--- a/acrylics.html
+++ b/acrylics.html
@@ -50,7 +50,7 @@
             <img src="assets/images/acrylics/acryllinjeq2gul.webp" alt="a acrylic painting, showing the lines of a woman">
         </div>
         <div class="back">
-            <a href="gallery.html" class="gallery-link"
+            <a href="gallery.html" class="link-box"
             aria-label="If you click on this it will take you back to the first gallery page where">
             Back to gallery
         </a>
