--- a/contact-reviced.html
+++ b/contact-reviced.html
@@ -49,7 +49,7 @@
 
         </div>
         <div class="back">
-            <a href="contact.html" class="gallery-link"
+            <a href="contact.html" class="link-box"
             aria-label="If you click on this it will take you back to the first gallery page where">
             Back to contact
         </a>
