--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
                 <textarea name="message" class="form-input textarea form-hover" placeholder="Write your message here!" required></textarea>
             </div>
             <div class="contact-element submit-center">
-                <input type="submit" value="Submit" class="submit-button gallery-link">
+                <input type="submit" value="Submit" class="link-box">
             </div>
 
         </form>
