--- a/illustrations.html
+++ b/illustrations.html
@@ -64,7 +64,7 @@
             
         </div>
         <div class="back">
-            <a href="gallery.html" class="gallery-link"
+            <a href="gallery.html" class="link-box"
             aria-label="If you click on this it will take you back to the first gallery page where">
             Back to gallery
         </a>
