--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
         <div class="about-container">
             <hr>
             <div class="about-me">
-                <h2 class="about-header">Hey you!</h2>
+                <h2 class="about-header hey-you">Hey you!</h2>
                 <p class="about-text">
                     Nice to meet you!<br> 
                     If you haven't already guessed, my name is Matilda!
